code writtten but expand and more possible models

--- a/Project Proposal.qmd
+++ b/Project Proposal.qmd
@@ -5,8 +5,6 @@ format: pdf
 editor: visual
 ---
 
-For the SURVMETH 640 course's final project, I plan to explore sports analytics using Premier League soccer data, with a particular focus on player performance prediction. My primary goal is to create a predictive model that forecasts player performance metrics (such as goals scored, assists, or player ratings) based on historical data. 
+For the SURVMETH 640 course's final project, I propose to build a predictive model that forecasts future transfer spending in the English Premier League for the next 20 seasons. My focus is solely on prediction i.e., developing a model that offers high accuracy for forward-looking expenditures rather than explaining the underlying relationships between spending and performance. The predictive insights from this model could empower club management to make more informed decisions regarding future transactions, such as setting competitive transfer budgets or deciding which players to pursue in anticipation of market trends. Using data from 1992/93 to 2021/22 scraped from Transfermarkt, I will leverage historical spending patterns to create a forecasting tool that serves as a practical decision-making aid.
 
-This analysis will help introduce and explain soccer to non-soccer viewers by clearly illustrating positions on the field, player roles, managerial strategies, and the dynamics of the transfer market through data-driven insights. I will utilize publicly available datasets from recent Premier League seasons, including detailed statistics about players (e.g., minutes played, goals, assists, passes completed), team formations, and managerial tactics. 
-
-So by applying supervised machine learning methods such as regression models [linear regression, ridge/lasso regression], decision trees, random forests, SVM and possibly gradient boosting algorithms, I aim to identify the most accurate model for predicting player performance. Ultimately, this predictive analysis can enhance viewer engagement by providing clear and intuitive explanations of what makes soccer exciting and strategic, thus promoting interest among new audiences.
+In this project, I will also take a comprehensive approach by beginning with an exploratory data analysis that includes descriptive statistics and visualizations to highlight historical trends in transfer spending. Subsequently, I will experiment with a diverse set of supervised machine learning techniques such as time series methods like ARIMA and regression-based models like Random Forest, to identify the best approach for accurate forecasting. The ultimate objective for this project is to provide actionable predictions that have tangible benefits for team management like enabling clubs to strategically anticipate market conditions and optimize their financial planning for future transactions.
